--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                         <figure><a href="https://enlyft.in/" target="_blank"><img src="images/enlyftjpg.jpeg" alt="enlyft logo"></a></figure>
 <!--                        <ul style="list-style-type: disc; color: white;">-->
                        <h2 style="color: white;font-size:18px;text-align: center;margin-bottom: 20px;">India's <span style="font-weight:bolder;font-size:20px;color:#EF1931;">Leading</span> Influencer Marketing Agency</h2>
-                        <h2 style="color: white;font-size:18px;text-align: center;"><strong>Get Your <span style="font-weight:bolder;font-size:20px;color:#EF1931;">30</span> Minute <span style="font-weight:bolder;font-size:20px;color:#EF1931;">FREE</span> Influencer Marketing <span style="font-weight:bolder;font-size:20px;color:#EF1931;">Audit Now!</span></strong></h2>                        
+                       <h2 style="color: white;font-size:18px;text-align: center;">Get <span style="font-weight:bolder;font-size:20px;color:#EF1931;">FREE</span> Influencer Marketing Campaign Portfolio for your <span style="font-weight:bolder;font-size:20px;color:#EF1931;">BRAND</span> within <span style="font-weight:bolder;font-size:20px;color:#EF1931;">30</span> Minutes.</h2>
+<!--                        <h2 style="color: white;font-size:18px;text-align: center;"><strong>Get Your <span style="font-weight:bolder;font-size:20px;color:#EF1931;">30</span> Minute <span style="font-weight:bolder;font-size:20px;color:#EF1931;">FREE</span> Influencer Marketing <span style="font-weight:bolder;font-size:20px;color:#EF1931;">Audit Now!</span></strong></h2>                        -->
 <!--                       <p style="color: white;"><i class="zmdi zmdi-assignment-check" style="font-size: 21px;"></i> Get <strong style="color: #FA4949;">Right Influencer</strong> for Your Brand</p>-->
 <!--                       <p style="color: white;"><i class="zmdi zmdi-airplane" style="font-size: 21px;"></i> <strong style="color: #FA4949;">Boost</strong> in Engagement</p>  -->
 <!--                       <p style="color: white;"><i class="zmdi zmdi-trending-up" style="font-size: 21px;"></i> Increase in <strong style="color: #FA4949;">ROI</strong></p>-->
@@ -57,11 +58,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="website"><i class="zmdi zmdi-globe-alt"></i></label>
-                                <input type="text" name="website" id="website" placeholder="Your Website URL"/ required>
+                                <input type="text" name="website" id="website" placeholder="Your Website URL"/>
                             </div>
                             <div class="form-group">
                                 <label for="message"><i class="zmdi zmdi-mail-send"></i></label>
-                                <input type="text" name="message" id="message" placeholder="Your Message"/>
+                                <input type="text" name="message" id="message" placeholder="Your Message"/ required>
                             </div>
                             <div class="form-group form-button">
                                 <input type="submit" name="signup" id="signup" class="form-submit" 
